--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.21"
+    ext.fragment_version = "1.3.6"
+    ext.nav_version = "2.3.5"
+    ext.lifecycle_version = "2.3.1"
+    ext.koin_version = "3.1.2"
+    ext.rx_java_version = "2.2.9"
+    ext.rx_java_retrofit_adapter_version = "2.5.0"
+    ext.rx_android_version = "2.1.1"
+    ext.retrofit_version = "2.9.0"
+
+    //Testing
+    ext.junit_version = "4.13.2"
+    ext.truth_version = "1.0.1"
+    ext.core_testing_version = "2.1.0"
+    ext.androidx_junit_version = "1.1.3"
+    ext.espresso_version = "3.4.0"
+
     repositories {
         google()
         mavenCentral()
@@ -8,6 +24,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +35,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
